--- a/medecin/src/main/resources/application.properties
+++ b/medecin/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 server.port=8089
+
+spring.cloud.circuitbreaker.resilience4j.enabled=true
+spring.cloud.openfeign.circuitbreaker.enabled=true
