🔧 Mise en place gateway dynamique et correction Eureka

--- a/patient/src/main/resources/application.properties
+++ b/patient/src/main/resources/application.properties
@@ -8,3 +8,6 @@ server.port=9090
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=productDB
 spring.data.mongodb.uri=mongodb://localhost:27017/yourdatabase
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+logging.level.com.netflix.discovery=DEBUG
