--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -15,14 +15,24 @@ spring:
           uri: http://localhost:8089
           predicates:
             - Path=/medecins/**
-
         - id: patient-service
-          uri: http://localhost:9090
+          uri: lb://PATIENT
           predicates:
             - Path=/patients/**
 
+      server:
+        webflux:
+          discovery:
+            locator:
+              enabled: true
+              lower-case-service-id: true
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
 logging:
   level:
-    org.springframework: DEBUG
-
-    #spring.cloud.gateway.discovery.locator.enabled=true dynamique
+    org.springframework.cloud.gateway: DEBUG
+    org.springframework.cloud.gateway.route.RouteDefinitionLocator: INFO
