--- a/medecin/src/main/resources/application.properties
+++ b/medecin/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=medecin
+spring.application.name=medecin-service
 
 spring.datasource.url=jdbc:mysql://localhost:3306/medecindb
 spring.datasource.username=root
@@ -14,3 +14,8 @@ server.port=8089
 
 spring.cloud.circuitbreaker.resilience4j.enabled=true
 spring.cloud.openfeign.circuitbreaker.enabled=true
+# URL de ton eureka-server
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# (Optionnel) Pour voir les logs de registration
+logging.level.com.netflix.discovery=DEBUG
