--- a/patient/src/main/resources/application.properties
+++ b/patient/src/main/resources/application.properties
@@ -9,5 +9,6 @@ server.port=9090
 #spring.data.mongodb.database=productDB
 spring.data.mongodb.uri=mongodb://localhost:27017/yourdatabase
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 logging.level.com.netflix.discovery=DEBUG
