--- a/medecin/src/main/resources/application.properties
+++ b/medecin/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
