add docker file + docker compose

--- a/medecin/src/main/resources/application.properties
+++ b/medecin/src/main/resources/application.properties
@@ -1,22 +1,30 @@
+# Nom de l'application dans Eureka
 spring.application.name=medecin-service
 
-spring.datasource.url=jdbc:mysql://localhost:3306/medecindb
-spring.datasource.username=root
-spring.datasource.password=
+# Port du serveur
+server.port=8089
 
+# Configuration datasource MySQL (avec variables d'environnement et fallback local)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://medecin-db:3306/medecindb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-server.port=8089
+# Kafka
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+spring.kafka.consumer.properties.spring.json.trusted-packages=*
 
+# Eureka client
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://eureka-server:8761/eureka}
+
+# Circuit breaker
 spring.cloud.circuitbreaker.resilience4j.enabled=true
 spring.cloud.openfeign.circuitbreaker.enabled=true
-# URL de ton eureka-server
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-# (Optionnel) Pour voir les logs de registration
+# Logging Eureka
 logging.level.com.netflix.discovery=DEBUG
