--- a/patient/src/main/resources/application.properties
+++ b/patient/src/main/resources/application.properties
@@ -1,14 +1,18 @@
-spring.application.name=patient
+# Nom de l'application dans Eureka
+spring.application.name=patient-service
+
+# Port du serveur
 server.port=9090
 
-#spring.data.mongodb.authentication-database=.
-#spring.data.mongodb.username=MongoDB
-#spring.data.mongodb.password=
-# spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=productDB
-spring.data.mongodb.uri=mongodb://localhost:27017/yourdatabase
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
+# MongoDB (avec variable d'environnement et fallback local)
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb://patient-db:27017/patient_db}
 
+# Kafka
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+spring.kafka.consumer.properties.spring.json.trusted-packages=*
+
+# Eureka client
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://eureka-server:8761/eureka}
+
+# Logging Eureka
 logging.level.com.netflix.discovery=DEBUG
